syntax = "proto3";

option csharp_namespace = "Sisa.Common.Enums";

package sisa.common.enums;

enum SortDirection {
  SORT_DIRECTION_UNSPECIFIED = 0; // unspecified
  SORT_DIRECTION_ASC = 1; // ascending
  SORT_DIRECTION_DESC = 2; // descending
}
