syntax = "proto3";

option csharp_namespace = "Sisa.Common.Params";

package sisa.common.params;

import "sisa/libs/common/enums/operator.proto";
import "sisa/libs/common/enums/combinator.proto";

message FilterRule {
  string field = 1;
  string value = 2;
  sisa.common.enums.Operator operator = 3;
}

message FilteringParams {
  bool not = 1;
  sisa.common.enums.Combinator combinator = 2;
  repeated FilterRule rules = 3;
}
