syntax = "proto3";

option csharp_namespace = "Sisa.Grpc.Queries";

package sisa.common;

message PagingParams {
  int32 pageIndex = 1;
  int32 pageSize = 2;
}
